# pymilvus-pg

./: .env.example  .gitignore  CLAUDE.md  Dockerfile.test  Makefile  README.md  README_TESTING.md  docker-compose.test.yml  pyproject.toml  pytest.ini  tmp.py
.claude/: settings.local.json
.github/workflows/: lint.yml  release.yml  test.yml
benchmark/: README.md  __init__.py  benchmark_insert_upsert.py  run_benchmark.py
benchmark/configs/: comprehensive.json  mini_test.json  no_vectors.json  quick_test.json  vector_sampling.json
deployment/milvus/: docker-compose.yml  milvus-values.yaml
deployment/pgsql/: docker-compose.yml  pgsql-values.yaml
docs/: high_performance_comparator.md  three_way_validation.md
example/: automatic_lmdb_demo.py  complex_demo.py  demo.py  diff_demo.py  high_performance_comparator_demo.py  ignore_vector_demo.py  long_run_checker.py  multi_thread_checker.py  pk_compare_demo.py  test_filter_to_sql.py  three_way_validation_demo.py  verify.py
jenkins/: README.md  pymilvus_pg_batch_test.groovy  pymilvus_pg_stable_test.groovy
jenkins/values/: cluster-storagev1.yaml  cluster-storagev2.yaml
scripts/: run_local_tests.sh
src/pymilvus_duckdb/: __init__.py  milvus_duckdb_client.py  milvus_pg_client.py
src/pymilvus_pg/: __init__.py  builtin_schemas.py  cli.py  comparators.py  lmdb_manager.py  logger_config.py  milvus_pg_client.py
tests/: __init__.py  conftest.py  test_demo_operations.py  test_integration.py  test_lmdb_validation.py  test_logger_config.py  test_milvus_pg_client.py  test_performance.py  test_utils.py
tests/setup_env/pgsql/: docker-compose.yml
